test/ui/tests/name-resolution/undefined-but-having-lookalikes.stderr
error[E021]: the binding ‘tree-sinner’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:7:10
  |
7 | a: Nat = tree-sinner
  |          ^^^^^^^^^^^
  |
 help: a binding with a similar name exists in scope: `tree-sitter` (tree-sinntter)

error[E021]: the binding ‘Pathway’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:11:11
   |
11 | P: Type = Pathway
   |           ^^^^^^^
   |

error[E021]: the binding ‘kore’ is not defined in the root module
  --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:14:14
   |
14 |     a: super.kore.nat.Nat = tree-sinner ;;; @Bug "core" should be suggested for "kore"
   |              ^^^^
   |

error[E021]: the binding ‘tree-sinner’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:14:29
   |
14 |     a: super.kore.nat.Nat = tree-sinner ;;; @Bug "core" should be suggested for "kore"
   |                             ^^^^^^^^^^^
   |

error[E021]: the binding ‘bet’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:18:57
   |
18 | func (A: Type) (alpha: A) (beta: A) (gamma-blocker: A): bet =
   |                                                         ^^^
   |
  help: a binding with a similar name exists in scope: `beta`

error[E021]: the binding ‘identiti’ is not defined in module `extern.core`
  --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:21:10
   |
21 |     core.identiti gamha_blocker
   |          ^^^^^^^^
   |

error[E021]: the binding ‘gamha_blocker’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:21:19
   |
21 |     core.identiti gamha_blocker
   |                   ^^^^^^^^^^^^^
   |
  help: a binding with a similar name exists in scope: `gamma-blocker` (gamhma_-blocker)

error[E021]: the binding ‘Alppa’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:25:9
   |
25 |         Alppa \omega 0 => onega ;;; @Bug fatal
   |         ^^^^^
   |
  help: a binding with a similar name exists in scope: `Alpha` (Alppha)

error[E021]: the binding ‘onega’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/undefined-but-having-lookalikes.lushui:29:21
   |
29 |         \omega 0 => onega
   |                     ^^^^^
   |
  help: a binding with a similar name exists in scope: `omega` (onmega)

error: aborting due to 9 previous errors

